backport: re PR c++/88410 (internal compiler error: output_operand: invalid expression as operand)

Backported from mainline
	2018-12-17  Jakub Jelinek  <jakub@redhat.com>

	PR c++/88410
	* cp-gimplify.c (cp_fold) <case ADDR_EXPR>: For offsetof-like folding,
	call maybe_constant_value on val to see if it is INTEGER_CST.

	* g++.dg/cpp0x/pr88410.C: New test.

From-SVN: r267710